# hitVisionAPP-OHOS

./: README.md  build-profile.json5  config  install_list_capability.json  install_list_permissions.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  SystemCpuUsage.cpp  TCPServer1.cpp  TCPServerClass.cpp  burner.cpp  cpuUsage.cpp  integrityCheck1.cpp  integrityCheck2.cpp  integrityCheckClass.cpp  serial.cpp  serialPort1.cpp  serialPortClass.cpp  service.cpp  var.cpp
entry/src/main/cpp/include/: SystemCpuUsage.h  TCPServer1.h  TCPServerClass.h  burner.h  cpuUsage.h  integrityCheck1.h  integrityCheck2.h  integrityCheckClass.h  log.h  serial.h  serialPort1.h  serialPortClass.h  var.h
entry/src/main/cpp/types/libSystemCpuUsage/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libburner/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libserialPort1/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libserialport/: index.d.ts  oh-package.json5
entry/src/main/cpp/types/libservice/: index.d.ts  oh-package.json5
entry/src/main/ets/ServiceExtAbility/: ArkTS_CpuUsage.ets  ServiceExtAbility.ets
entry/src/main/ets/pages/: Index.ets  index_example.ets
